# ai-stock-algo-03

./: .env.example  .gitignore  README.md  REFACTOR_PLAN.md  TurboDMT_v2_Development.md  backtest.py  cli.py  compare_strategies.py  direct_dmt_v2_test.py  dmt  dmt_model.py  ensemble_backtest.py  hybrid  mkdocs.yml  pyproject.toml  requirements.txt  test_dmt_v2.py  trade.py  trader  tri_shot  tri_shot_cli.py  tri_shot_features.py  turbo_qt  turbo_qt_backtest.py
data/: BTCUSDT_1m_20250315_20250415.csv  BTCUSDT_1m_20250315_20250425.csv  BTCUSDT_1m_20250401_20250405.csv  BTCUSDT_1m_20250401_20250407.csv  BTCUSDT_1m_20250401_20250415.csv  BTCUSDT_1m_20250401_20250420.csv  BTCUSDT_3m_20240306_20250425.csv  BTCUSDT_3m_20250101_20250430.csv
docs/: index.md
examples/: simple_backtest.py
results/: backtest_portfolio_BTCUSDT_1m_20250504_140741.csv  backtest_portfolio_BTCUSDT_1m_20250504_140743.csv  backtest_portfolio_BTCUSDT_1m_20250504_142858.csv  backtest_portfolio_BTCUSDT_1m_20250504_143225.csv  backtest_portfolio_BTCUSDT_1m_20250505_123750.csv  backtest_trades_BTCUSDT_1m_20250504_142858.csv  backtest_trades_BTCUSDT_1m_20250504_143225.csv
scripts/: analyze_dmt_v2.py  backtest_dmt_rl.py  backtest_historical.py  btc_final_validation.py  btc_minimal_demo.py  btc_quick_validation.py  btc_simple_validation.py  btc_walk_forward_validation.py  compatibility_wrappers.py  create_synthetic_data.py  dmt_model.py  download_historical_data.py  grid_search.py  paper_trade.py  paper_trade_active.py  quick_demo.py  run_tests.py  setup_testnet.sh  simple_transformer_rl_test.py  trade.py  (+8 more)
(+62 files in other folders)
