[project]
name = "stock-trader-o3-algo"
version = "0.1.0"
description = "Algorithmic trading strategy based on the micro-CTA approach"
authors = [
    {name = "User"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas",
    "numpy",
    "yfinance",
    "alpaca-trade-api",
    "pytz",
    "matplotlib",
    "pytest",
    "python-dotenv",
    "xgboost>=1.5.0",
    "joblib>=1.1.0",
    "scikit-learn>=1.0.0",
    "torch>=2.0.0",
    "shap (>=0.47.2,<0.48.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
